--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imdone-api",
-  "version": "1.0.1",
+  "version": "0.0.1",
   "description": "Plugin API for imdone",
   "main": "plugin.js",
   "repository": {
@@ -11,5 +11,8 @@
   "bugs": {
     "url": "https://github.com/imdone/imdone-api/issues"
   },
-  "homepage": "https://imdone.io"
+  "homepage": "https://imdone.io",
+  "devDependencies": {
+    "imdone-core": "^1.22.2"
+  }
 }
