--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "imdone-api",
   "version": "0.0.2",
   "description": "Plugin API for imdone",
-  "main": "plugin.js",
+  "main": "./lib/plugin.js",
+  "types": "./types/plugin.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/imdone/imdone-api.git"
@@ -11,5 +12,11 @@
   "bugs": {
     "url": "https://github.com/imdone/imdone-api/issues"
   },
-  "homepage": "https://imdone.io"
+  "homepage": "https://imdone.io",
+  "devDependencies": {
+    "typescript": "^4.5.2"
+  },
+  "scripts": {
+    "build": "tsc"
+  }
 }
