Add onBeforeUpdate and onBoardUpdate

--- a/.imdone/config.yml
+++ b/.imdone/config.yml
@@ -33,6 +33,7 @@ lists:
     name: Recently Completed
 settings:
   openIn: code
+  customOpenIn: ''
   editorTheme: blackboard
   journalType: New File
   journalPath: imdone-tasks
