--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imdone-api",
-  "version": "1.52.1",
+  "version": "1.52.2",
   "description": "Plugin API for imdone",
   "main": "./lib/plugin.js",
   "types": "./types/plugin.d.ts",
@@ -14,9 +14,11 @@
   },
   "homepage": "https://imdone.io",
   "devDependencies": {
-    "typescript": "^4.5.2"
+    "typedoc": "^0.27.6",
+    "typescript": "^5.7"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "docs": "typedoc --out docs src/settings.ts src/project.ts src/plugin.ts"
   }
 }
