--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imdone-api",
-  "version": "1.52.2",
+  "version": "1.53.0",
   "description": "Plugin API for imdone",
   "main": "./lib/plugin.js",
   "types": "./types/plugin.d.ts",
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/imdone/imdone-api/issues"
   },
-  "homepage": "https://imdone.io",
+  "homepage": "https://imdone.github.io/imdone-api/",
   "devDependencies": {
     "typedoc": "^0.27.6",
     "typescript": "^5.7"
